<resources>
    <string name="app_name">VDO call webTRC testing</string>
    <string name="mic_button">mic_button</string>
    <string name="someone_is_calling">someone is calling</string>
    <string name="accpet_button">accpet button</string>
    <string name="reject_button">reject button</string>
    <string name="who_to_call">who to call ?</string>
    <string name="call">call</string>
    <string name="image">image</string>
    <string name="mute_unmute_mic" />
    <string name="switch_camera" />
    <string name="video_button">video button</string>
</resources>