<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/incomingCallLayout"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="6"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/someone_is_calling"
            android:id="@+id/incomingNameTV"/>

        <ImageView
            android:contentDescription="@string/accpet_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:src="@drawable/ic_accept"
            android:padding="15dp"
            android:id="@+id/acceptButton"/>
        <ImageView
            android:contentDescription="@string/reject_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:src="@drawable/ic_reject"
            android:padding="15dp"
            android:id="@+id/rejectButton"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/incomingCallLayout"
        android:id="@+id/whoToCallLayout">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/who_to_call"
            android:layout_margin="30dp"
            android:id="@+id/targetUserNameEt"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"

            android:layout_below="@id/targetUserNameEt"
            android:layout_marginHorizontal="30dp"
            android:text="@string/call"
            android:id="@+id/callBtn"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/callLayout"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_height="match_parent">
        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/remote_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/local_view"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_above="@+id/controls"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:elevation="16dp" />

        <LinearLayout
            android:gravity="center"
            android:background="@drawable/curve_background"
            android:backgroundTint="@android:color/secondary_text_light"
            android:id="@+id/controls"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:contentDescription="@string/mute_unmute_mic"
                android:id="@+id/mic_button"
                android:layout_width="50dp"
                android:layout_height="100dp"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:background="@drawable/circle_background"
                app:backgroundTint="@color/cardview_dark_background"
                />
            <ImageView
                android:contentDescription="@string/image"
                android:id="@+id/video_button"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:background="@drawable/circle_background"
                app:backgroundTint="@color/cardview_dark_background" />
            <ImageView
                android:id="@+id/end_call_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:background="@drawable/circle_background"
                app:backgroundTint="@android:color/holo_red_dark"
                />
            <ImageView
                android:contentDescription="@string/switch_camera"
                android:id="@+id/switch_camera_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:background="@drawable/circle_background"
                app:backgroundTint="@color/cardview_dark_background"
                />
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>